# platform.adaptation.renesas_rcar.wayland-kms

./: LICENSE  Makefile.am  wayland-kms.c
packaging/: wayland-kms.spec
